# Flux_Application

./: .gitignore
Battery_Motor_Encoder/: Battery_Motor_Encoder.ino
Temp_Probe_Youtube/: Temp_Probe_Youtube.ino
flux_esp_application/: CMakeLists.txt  sdkconfig.defaults
flux_esp_application/main/: CMakeLists.txt  loggingDefs.h  main.c  mainDefs.h
flux_esp_application/main/as5600/: as5600.c  as5600.h
flux_esp_application/main/bleModule/: bleNotifyPackets.c  bleNotifyPackets.h  blePacketHandler.c  blePacketHandler.h  fluxBleService.c  fluxBleService.h  gattSvr.c  protocolTypes.h
flux_esp_application/main/feedback/: as5600.c  as5600.h  feedback.h
flux_esp_application/main/motorCtrl/: motorCtrl.c  motorCtrl.h
flux_esp_application/main/motorDrivers/: motorDriverIF.h  motorDriver_L293D.c  motorDriver_L293D.h
flux_esp_application/main/webInterface/: index.html  webApp.c  webApp.h  wifiSetup.c  wifiSetup.h
